force-app/main/default/objects/Mortgage_Case__c/Mortgage_Case__c.object-meta.xml
<CustomObject>
    <label>Mortgage Case</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mortgage Case</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>