force-app/main/default/objects/Mortgage_Case__c/fields/A_discount_on_your_mortgage_repayments__c.field-meta.xml
<CustomField>
    <fullName>A_discount_on_your_mortgage_repayments__c</fullName>
    <inlineHelpText>A discount on your mortgage repayments in the early years?</inlineHelpText>
    <label>Discounted rate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>