force-app/main/default/objects/Mortgage_Case__c/fields/Ability_to_make_underpayments__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_make_underpayments__c</fullName>
    <label>Ability to make underpayments?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>