force-app/main/default/objects/Mortgage_Case__c/fields/Access_to_an_initial_cash_sum_known_a__c.field-meta.xml
<CustomField>
    <fullName>Access_to_an_initial_cash_sum_known_a__c</fullName>
    <inlineHelpText>Access to an initial cash sum (known as cashback)?</inlineHelpText>
    <label>Access to an initial cash sum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>