force-app/main/default/objects/Mortgage_Case__c/fields/Additional_Vulnerability_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Vulnerability_Information__c</fullName>
    <label>Additional Vulnerability Information</label>
    <type>TextArea</type>
</CustomField>