force-app/main/default/objects/Mortgage_Case__c/fields/Admin__c.field-meta.xml
<CustomField>
    <fullName>Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User entered is not an Admin.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Admin</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Mortgage_Case2</relationshipName>
    <type>Lookup</type>
</CustomField>