force-app/main/default/objects/Mortgage_Case__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User entered is not a Advisor.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Advisor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Mortgage_Case1</relationshipName>
    <type>Lookup</type>
</CustomField>