force-app/main/default/objects/Mortgage_Case__c/fields/Affordability_Total__c.field-meta.xml
<CustomField>
    <fullName>Affordability_Total__c</fullName>
    <formula>Children_Expenses__c + Expenditure_Expenses__c + Household_Expenses__c + Lifestyle_Expenses__c + Living_Expenses__c + Transport_Expenses__c + Widget_Children_Value__c + Widget_Expenditure_Value__c + Widget_Household_Value__c + Widget_Lifestyle_Value__c + Widget_Living_Value__c + Widget_Transport_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affordability Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>