force-app/main/default/objects/Mortgage_Case__c/fields/Agents_fees_monthly__c.field-meta.xml
<CustomField>
    <fullName>Agents_fees_monthly__c</fullName>
    <label>Agents Fees (Monthly)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>