force-app/main/default/objects/Mortgage_Case__c/fields/An_upper_limit_on_your_mortgage_costs_fo__c.field-meta.xml
<CustomField>
    <fullName>An_upper_limit_on_your_mortgage_costs_fo__c</fullName>
    <label>An upper limit on your mortgage costs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>