force-app/main/default/objects/Mortgage_Case__c/fields/Application_No__c.field-meta.xml
<CustomField>
    <fullName>Application_No__c</fullName>
    <label>Lender&apos;s Application No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>