force-app/main/default/objects/Mortgage_Case__c/fields/Application_Offered_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Offered_Date__c</fullName>
    <label>Application Offered Date</label>
    <type>Date</type>
</CustomField>