force-app/main/default/objects/Mortgage_Case__c/fields/Application_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submitted_Date__c</fullName>
    <label>Application Submitted Date</label>
    <type>Date</type>
</CustomField>