force-app/main/default/objects/Mortgage_Case__c/fields/Are_all_applicants_first_time_buyers__c.field-meta.xml
<CustomField>
    <fullName>Are_all_applicants_first_time_buyers__c</fullName>
    <label>Are all applicants first time buyers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>