force-app/main/default/objects/Mortgage_Case__c/fields/Areyoulikelytomovehome__c.field-meta.xml
<CustomField>
    <fullName>Areyoulikelytomovehome__c</fullName>
    <inlineHelpText>Are you likely to move home in the foreseeable future?</inlineHelpText>
    <label>Are you likely to move home?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>