force-app/main/default/objects/Mortgage_Case__c/fields/Areyoureceivinganyincentives__c.field-meta.xml
<CustomField>
    <fullName>Areyoureceivinganyincentives__c</fullName>
    <description>Are you receiving any incentives for buying this property ?</description>
    <inlineHelpText>Are you receiving any incentives for buying this property ?</inlineHelpText>
    <label>Are you receiving any incentives?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>