force-app/main/default/objects/Mortgage_Case__c/fields/BTL_Type__c.field-meta.xml
<CustomField>
    <fullName>BTL_Type__c</fullName>
    <label>BTL Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard (Business) BTL</fullName>
            </value>
            <value>
                <fullName>Consumer BTL</fullName>
            </value>
            <value>
                <fullName>Regulated BTL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>