force-app/main/default/objects/Mortgage_Case__c/fields/BTLReason__c.field-meta.xml
<CustomField>
    <fullName>BTLReason__c</fullName>
    <label>Mortgage reason for BTL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Remortgage Like</fullName>
            </value>
            <value>
                <fullName>Remortgage Debt</fullName>
            </value>
            <value>
                <fullName>Remortgage Improvement</fullName>
            </value>
            <value>
                <fullName>Remortgage Capital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>