force-app/main/default/objects/Mortgage_Case__c/fields/Case_Offered_Stage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Offered_Stage_End_Date__c</fullName>
    <label>Case Offered Stage End Date</label>
    <type>Date</type>
</CustomField>