force-app/main/default/objects/Mortgage_Case__c/fields/Closed_Lost_Stage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Stage_End_Date__c</fullName>
    <label>Closed Lost Stage End Date</label>
    <type>Date</type>
</CustomField>