force-app/main/default/objects/Mortgage_Case__c/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>