force-app/main/default/objects/Mortgage_Case__c/fields/Communication_preference__c.field-meta.xml
<CustomField>
    <fullName>Communication_preference__c</fullName>
    <label>Communication preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brail</fullName>
            </value>
            <value>
                <fullName>Large Font</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>