force-app/main/default/objects/Mortgage_Case__c/fields/CompanyType__c.field-meta.xml
<CustomField>
    <fullName>CompanyType__c</fullName>
    <label>CompanyType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited Company</fullName>
            </value>
            <value>
                <fullName>Directors Guarantee</fullName>
            </value>
            <value>
                <fullName>Overseas Company</fullName>
            </value>
            <value>
                <fullName>SPV Company</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>