force-app/main/default/objects/Mortgage_Case__c/fields/Completed_Stage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Stage_End_Date__c</fullName>
    <label>Completed Stage End Date</label>
    <type>Date</type>
</CustomField>