force-app/main/default/objects/Mortgage_Case__c/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User entered is not a Compliance.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Compliance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Mortgage_Case3</relationshipName>
    <type>Lookup</type>
</CustomField>