force-app/main/default/objects/Mortgage_Case__c/fields/Council_tax_band__c.field-meta.xml
<CustomField>
    <fullName>Council_tax_band__c</fullName>
    <label>Council tax band</label>
    <length>255</length>
    <type>Text</type>
</CustomField>