force-app/main/default/objects/Mortgage_Case__c/fields/Country_of_residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_residence__c</fullName>
    <label>Country of Residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>Northern Ireland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>