force-app/main/default/objects/Mortgage_Case__c/fields/Credit_Health__c.field-meta.xml
<CustomField>
    <fullName>Credit_Health__c</fullName>
    <label>Credit Health</label>
    <length>255</length>
    <type>Text</type>
</CustomField>