force-app/main/default/objects/Mortgage_Case__c/fields/Current_lender__c.field-meta.xml
<CustomField>
    <fullName>Current_lender__c</fullName>
    <label>Current Lender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCORD</fullName>
                <label>Accord</label>
            </value>
            <value>
                <fullName>AFFIRMATIVE</fullName>
                <label>Affirmative</label>
            </value>
            <value>
                <fullName>AIB</fullName>
            </value>
            <value>
                <fullName>AL_RAYAN</fullName>
                <label>Al Rayan Bank</label>
            </value>
            <value>
                <fullName>ALDERMORE</fullName>
                <label>Aldermore</label>
            </value>
            <value>
                <fullName>ATOM</fullName>
                <label>Digital Mortgages by Atom Bank</label>
            </value>
            <value>
                <fullName>AXIS_BANK</fullName>
                <label>Axis Bank</label>
            </value>
            <value>
                <fullName>BANK_CHINA</fullName>
                <label>Bank of China</label>
            </value>
            <value>
                <fullName>BANK_OF_INDIA</fullName>
                <label>State Bank of India</label>
            </value>
            <value>
                <fullName>BANKOFIRELAND</fullName>
                <label>Bank of Ireland</label>
            </value>
            <value>
                <fullName>BARCLAYS</fullName>
                <label>Barclays</label>
            </value>
            <value>
                <fullName>BATH</fullName>
                <label>Bath Building Society</label>
            </value>
            <value>
                <fullName>BEVERLY</fullName>
                <label>Beverly</label>
            </value>
            <value>
                <fullName>BLUESTONE</fullName>
                <label>Bluestone Mortgages</label>
            </value>
            <value>
                <fullName>BRIGHTSTAR</fullName>
                <label>Brightstar</label>
            </value>
            <value>
                <fullName>BUCKINGHAMSHIRE</fullName>
                <label>Buckinghamshire Building Society</label>
            </value>
            <value>
                <fullName>BUILD_LOAN</fullName>
                <label>BuildLoan</label>
            </value>
            <value>
                <fullName>CAMBRIDGE</fullName>
                <label>Cambridge Building Society</label>
            </value>
            <value>
                <fullName>CAMBRIDGECOUNTIES</fullName>
                <label>Cambridge &amp; Counties Bank</label>
            </value>
            <value>
                <fullName>CASTLE_TRUST</fullName>
                <label>Castle Trust</label>
            </value>
            <value>
                <fullName>CENTRAL_TRUST</fullName>
                <label>Central Trust</label>
            </value>
            <value>
                <fullName>CHELSEA</fullName>
                <label>Chelsea</label>
            </value>
            <value>
                <fullName>CHORLEY</fullName>
                <label>Chorley Building Society</label>
            </value>
            <value>
                <fullName>CLYDESDALE</fullName>
                <label>Clydesdale</label>
            </value>
            <value>
                <fullName>COOPERATIVE</fullName>
                <label>Platform</label>
            </value>
            <value>
                <fullName>COVENTRY</fullName>
                <label>Coventry Building Society</label>
            </value>
            <value>
                <fullName>CUMBERLAND</fullName>
                <label>Cumberland Building Society</label>
            </value>
            <value>
                <fullName>DANSKE</fullName>
                <label>Danske Bank</label>
            </value>
            <value>
                <fullName>DARLINGTON</fullName>
                <label>Darlington Building Society</label>
            </value>
            <value>
                <fullName>DUDLEY</fullName>
                <label>Dudley Building Society</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>