force-app/main/default/objects/Mortgage_Case__c/fields/Current_Mortgage_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Mortgage_Balance__c</fullName>
    <label>Current Mortgage Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>