force-app/main/default/objects/Mortgage_Case__c/fields/CurrentValuation__c.field-meta.xml
<CustomField>
    <fullName>CurrentValuation__c</fullName>
    <inlineHelpText>If you are not sure guess is fine</inlineHelpText>
    <label>Current Valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>