force-app/main/default/objects/Mortgage_Case__c/fields/Customer2__c.field-meta.xml
<CustomField>
    <fullName>Customer2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mortgage Cases</relationshipLabel>
    <relationshipName>Mortgage_Cases_Mortgage_Case</relationshipName>
    <type>Lookup</type>
</CustomField>