force-app/main/default/objects/Mortgage_Case__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mortgage Case (Customer)</relationshipLabel>
    <relationshipName>Mortgage_Case</relationshipName>
    <type>Lookup</type>
</CustomField>