force-app/main/default/objects/Mortgage_Case__c/fields/DIP_Obtained_Date__c.field-meta.xml
<CustomField>
    <fullName>DIP_Obtained_Date__c</fullName>
    <label>DIP Obtained Stage Start Date</label>
    <type>Date</type>
</CustomField>