force-app/main/default/objects/Mortgage_Case__c/fields/DIP_Obtained_Stage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DIP_Obtained_Stage_End_Date__c</fullName>
    <label>DIP Obtained Stage End Date</label>
    <type>Date</type>
</CustomField>