force-app/main/default/objects/Mortgage_Case__c/fields/Discount_on_your_mortgage_repayments__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_your_mortgage_repayments__c</fullName>
    <label>Discount on your mortgage repayments?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>