force-app/main/default/objects/Mortgage_Case__c/fields/Do_the_applicants_live_at_different_prop__c.field-meta.xml
<CustomField>
    <fullName>Do_the_applicants_live_at_different_prop__c</fullName>
    <inlineHelpText>Do the applicants live at different properties?</inlineHelpText>
    <label>Do the applicants live at different prop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>