force-app/main/default/objects/Mortgage_Case__c/fields/Do_you_own_your_main_residence__c.field-meta.xml
<CustomField>
    <fullName>Do_you_own_your_main_residence__c</fullName>
    <label>Do you own your main residence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>