force-app/main/default/objects/Mortgage_Case__c/fields/Do_you_require_any_mortgage_features__c.field-meta.xml
<CustomField>
    <fullName>Do_you_require_any_mortgage_features__c</fullName>
    <inlineHelpText>Do you require any mortgage features?</inlineHelpText>
    <label>Do you require any mortgage features?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>