force-app/main/default/objects/Mortgage_Case__c/fields/Doestheflathaveadeckbalconyaccess__c.field-meta.xml
<CustomField>
    <fullName>Doestheflathaveadeckbalconyaccess__c</fullName>
    <label>Does the flat have a deck/balcony access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>