force-app/main/default/objects/Mortgage_Case__c/fields/Doyouhaveanyplanstopay_off__c.field-meta.xml
<CustomField>
    <fullName>Doyouhaveanyplanstopay_off__c</fullName>
    <inlineHelpText>Do you have any plans to pay off some or all of the mortgage in the foreseeable future?</inlineHelpText>
    <label>Do you have any plans to pay off?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>