force-app/main/default/objects/Mortgage_Case__c/fields/EPC_updated_date__c.field-meta.xml
<CustomField>
    <fullName>EPC_updated_date__c</fullName>
    <label>EPC updated date</label>
    <type>Date</type>
</CustomField>