force-app/main/default/objects/Mortgage_Case__c/fields/ExcouncilPurchasefromcouncildirectl__c.field-meta.xml
<CustomField>
    <fullName>ExcouncilPurchasefromcouncildirectl__c</fullName>
    <label>Ex-council/Purchase from council directl</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>