force-app/main/default/objects/Mortgage_Case__c/fields/Factfind_Ongoing_Date__c.field-meta.xml
<CustomField>
    <fullName>Factfind_Ongoing_Date__c</fullName>
    <label>Factfind Ongoing Stage Start Date</label>
    <type>Date</type>
</CustomField>