force-app/main/default/objects/Mortgage_Case__c/fields/Factfind_Submitted_Stage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Factfind_Submitted_Stage_End_Date__c</fullName>
    <label>Factfind Submitted Stage End Date</label>
    <type>Date</type>
</CustomField>