force-app/main/default/objects/Mortgage_Case__c/fields/First_Applicant_Contact__c.field-meta.xml
<CustomField>
    <fullName>First_Applicant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Applicant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mortgage Cases (First Applicant Contact)</relationshipLabel>
    <relationshipName>Mortgage_Cases_First_Applicant_Contact_M</relationshipName>
    <type>Lookup</type>
</CustomField>