force-app/main/default/objects/Mortgage_Case__c/fields/First_Applicant_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>First_Applicant_Contact_Title__c</fullName>
    <formula>First_Applicant_Contact__r.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>