force-app/main/default/objects/Mortgage_Case__c/fields/First_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>First_Applicant_Email__c</fullName>
    <formula>First_Applicant_Contact__r.Email</formula>
    <label>First Applicant Email</label>
    <type>Text</type>
</CustomField>